--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</nav>
 			<section class="slider container">
 				<h2 class="visually-hidden">Достоинства</h2>
-				<div class="slider-item">
+				<div class="slider-item slider-item1">
 					<h2>Долго, дорого,<br>скрупулезно.</h2>
 					<p>
 					Математически выверенный дизайн<br>
@@ -33,7 +33,7 @@
 					</p>
 					<a class="button" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item2">
+				<div class="slider-item slider-item2">
 					<h2>Любим математику<br>как никто другой</h2>
 					<p>
 					Никакого креатива, только математические формулы<br>
@@ -41,7 +41,7 @@
 					</p>
 					<a class="button" href="#">Узнать больше</a>
 				</div>
-				<div class="slider-item3">
+				<div class="slider-item slider-item3">
 					<h2>Только ночь,<br>только хардкор</h2>
 					<p>
 					Работать днем, как все? Мы против этого.<br>
