--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-header inner">
+		<header class="main-header">
 			<nav class="main-navigation container">
 				<a href="index.html">
 					<img src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
