--- a/shop.html
+++ b/shop.html
@@ -159,7 +159,7 @@
 
 		<footer class="main-footer">
 			<section class="contacts">
-				<div class="footer-map">
+				<div class="footer-map container">
 					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
 				</div>
 				<div class="footer-contacts">
