--- a/shop.html
+++ b/shop.html
@@ -27,8 +27,9 @@
 			</nav>
 		</header>
 
-		<main class="container">
+		<main>
 			<h1>Магазин готовых проектов</h1>
+			<div class="inner container">
 			<section class="filters">
 				<h2 class="visually-hidden">Фильтр товаров</h2>
 				<form class="filter" method="get" action="http://echo.htmlacademy.ru">
@@ -155,6 +156,7 @@
 					<li class="pagination-item"><a href="#">Следующая</a></li>
 				</ul>
 			</section>
+			</div>
 		</main>
 
 		<footer class="main-footer">
