--- a/index.html
+++ b/index.html
@@ -18,44 +18,52 @@
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="user-navigation">
-					<li class="basket">
+					<li>
 						<a class="basket" href="basket.html">Корзина</a>
 					</li>
 				</ul>
 			</nav>
-			<section class="slider container">
+			<section class="slider">
 				<h2 class="visually-hidden">Достоинства</h2>
-				<div class="slider-item slider-item1">
-					<h2>Долго, дорого,<br>скрупулезно.</h2>
-					<p>
-					Математически выверенный дизайн<br>
-					для вашего сайта или мобильного приложения.
-					</p>
-					<a class="button" href="#">Узнать больше</a>
-				</div>
-				<div class="slider-item slider-item2">
-					<h2>Любим математику<br>как никто другой</h2>
-					<p>
-					Никакого креатива, только математические формулы<br>
-					для расчета идеальных пропорций.
-					</p>
-					<a class="button" href="#">Узнать больше</a>
-				</div>
-				<div class="slider-item slider-item3">
-					<h2>Только ночь,<br>только хардкор</h2>
-					<p>
-					Работать днем, как все? Мы против этого.<br>
-					Ближе к полуночи работа только начинается.
-					</p>
-					<a class="button" href="#">Узнать больше</a>
-				</div>
+				<input type="radio" id="btn-1" name="toggle" checked>
+				<input type="radio" id="btn-2" name="toggle">
+				<input type="radio" id="btn-3" name="toggle">
 				<div class="slider-controls">
-					<label for="btn1" tabindex="0"><span class="visually-hidden">Слайд 1</span></label>
-					<input class="slider-controls-radio visually-hidden" id="btn1" type="radio" name="slider" checked>
-					<label for="btn2" tabindex="0"><span class="visually-hidden">Слайд 2</span></label>
-					<input class="slider-controls-radio visually-hidden" id="btn2" type="radio" name="slider">
-					<label for="btn3" tabindex="0"><span class="visually-hidden">Слайд 3</span></label>
-					<input class="slider-controls-radio visually-hidden" id="btn3" type="radio" name="slider">
+					<label for="btn-1"></label>
+					<label for="btn-2"></label>
+					<label for="btn-3"></label>
+				</div>
+				<div class="slides">
+					<div class="slide">
+						<div class="slide-text">
+							<div class="slide-title">Долго, дорого,<br>скрупулезно.</div>
+							<p>
+							Математически выверенный дизайн<br>
+							для вашего сайта или мобильного приложения.
+							</p>
+							<a class="btn" href="#">Узнать больше</a>
+						</div>
+					</div>
+					<div class="slide">
+						<div class="slide-text">
+							<div class="slide-title">Любим математику<br>как никто другой</div>
+							<p>
+							Никакого креатива, только математические формулы<br>
+							для расчета идеальных пропорций.
+							</p>
+							<a class="btn" href="#">Узнать больше</a>
+						</div>
+					</div>
+					<div class="slide">
+						<div class="slide-text">
+							<div class="slide-title">Только ночь,<br>только хардкор</div>
+							<p>
+							Работать днем, как все? Мы против этого.<br>
+							Ближе к полуночи работа только начинается.
+							</p>
+							<a class="btn" href="#">Узнать больше</a>
+						</div>
+					</div>
 				</div>
 			</section>
 		</header>
