--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							самоотдачи
 							</th>
 							<th>
-							Соблюдени<br>
+							Соблюдение<br>
 							сроков
 							</th>
 							<th>Минимальная<br>
@@ -176,16 +176,18 @@
 				<div class="footer-map">
 					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
 				</div>
-				<div class="footer-contacts">
-					<b>Nёrds Design Studio</b>
-					<p>
-					191186, Санкт-Петербург,<br>
-					ул. Б. Конюшенная, д. 19/8
-					</p>
-					<p class="mobile">
-					тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
-					</p>
-					<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
+				<div class="container">
+					<div class="footer-contacts">
+						<b>Nёrds Design Studio</b>
+						<p>
+						191186, Санкт-Петербург,<br>
+						ул. Б. Конюшенная, д. 19/8
+						</p>
+						<p class="mobile">
+						тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
+						</p>
+						<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
+					</div>
 				</div>
 			</section>
 			<section class="social container">
