--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation container">
-				<img class="" src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
+				<img src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
 				<ul class="site-navigation">
 					<li><a href="info.html">Студия</a></li>
 					<li><a href="customers.html">Клиенты</a></li>
