--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,9 @@
 		</header>
 
 		<main>
-			<h1 class="grey">Магазин готовых шаблонов</h1>
+			<div class="grey">
+				<h1>Магазин готовых шаблонов</h1>
+			</div>
 			<div class="inner container">
 				<section class="filters">
 					<h2 class="visually-hidden">Фильтр товаров</h2>
