--- a/shop.html
+++ b/shop.html
@@ -37,11 +37,19 @@
 					<form class="filter" method="get" action="http://echo.htmlacademy.ru">
 						<fieldset>
 							<legend>Стоимость:</legend>
-							<ul>
-								<li class="filter-option">
-								наверстать ползунок
-								</li>
-							</ul>
+							<div class="range-filter">
+								<div class="range-controls">
+									<div class="scale">
+										<div class="bar" style="margin-left: 7%; width: 57%"></div>
+									</div>
+									<div class="toggle toggle-min"></div>
+									<div class="toggle toggle-max"></div>
+								</div>
+								<div class="price-controls">
+									<label class="min-price">от <input name="min-price" type="text" value="0"></label>
+									<label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+								</div>
+							</div>
 						</fieldset>
 						<fieldset>
 							<legend>Сетка:</legend>
