--- a/shop.html
+++ b/shop.html
@@ -109,6 +109,7 @@
 					</div>
 					<ul class="catalog-list">
 						<li class="catalog-item">
+							<span></span>
 							<img src="img/sedona_preview.jpg" width="360" height="576" alt="шаблон сайта Sedona">
 							<div class="catalog-buy-item">
 								<h3><a href="#">Sedona</a></h3>
@@ -117,16 +118,18 @@
 							</div>
 						</li>
 						<li class="catalog-item">
+							<span></span>	
 							<img src="img/pink_app_preview.jpg" width="360" height="576" alt="шаблон сайта Pink App">
-							<div class="catalog-buy-item">
+							<div class="catalog-buy-item visually-hidden">
 								<h3><a href="#">Pink</a></h3>
 								<p>Продуктовый лендинг приложения для iOS и Android</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
+							<span></span>
 							<img src="img/barbershop_preview.jpg" width="360" height="576" alt="шаблон сайта Barbershop">
-							<div class="catalog-buy-item">
+							<div class="catalog-buy-item visually-hidden">
 								<h3><a href="#">Barbershop</a></h3>
 								<p>Сайт салоны красоты.<br />
 								Для мужчин, да.
@@ -135,24 +138,27 @@
 							</div>
 						</li>
 						<li class="catalog-item">
+							<span></span>
 							<img src="img/mishka_preview.jpg" width="360" height="576" alt="шаблон сайта Mishka">
-							<div class="catalog-buy-item">
+							<div class="catalog-buy-item visually-hidden">
 								<h3><a href="#">Mishka</a></h3>
 								<p>Интернет-магазин вязанных игрушек</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
+							<span></span>
 							<img src="img/a_plus_preview.jpg" width="360" height="576" alt="шаблон сайта A Plus">
-							<div class="catalog-buy-item">
+							<div class="catalog-buy-item visually-hidden">
 								<h3><a href="#">A Plus</a></h3>
 								<p>Лендинг курсов повышения квалификации</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
+							<span></span>
 							<img src="img/kvast_preview.jpg" width="360" height="576" alt="шаблон сайта Кваст">
-							<div class="catalog-buy-item">
+							<div class="catalog-buy-item visually-hidden">
 								<h3><a href="#">Кваст</a></h3>
 								<p>Промо-сайт производителя крафтового кваса</p>
 								<p class="button button-price">9 900 руб.</p>
