--- a/shop.html
+++ b/shop.html
@@ -113,8 +113,11 @@
 							<img src="img/sedona_preview.jpg" width="360" height="576" alt="шаблон сайта Sedona">
 							<div class="catalog-buy-item">
 								<h3><a href="#">Sedona</a></h3>
-								<p>Информационный сайт для туристов</p>
-								<p class="button button-price">9 900 руб.</p>
+								<p>
+								Информационный сайт<br>
+								для туристов
+								</p>
+								<p class=" button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
