--- a/shop.html
+++ b/shop.html
@@ -55,15 +55,15 @@
 							<legend>Сетка:</legend>
 							<ul>
 								<li class="filter-option">
-									<input class="filter-input filter-input-radio" id="filter-adaptation" type="radio" name="grid" value="adaptation" checked>
+									<input class="filter-input filter-input-radio visually-hidden" id="filter-adaptation" type="radio" name="grid" value="adaptation" checked>
 									<label for="filter-adaptation">Адаптивная</label>
 								</li>
 								<li class="filter-option">
-									<input class="filter-input filter-input-radio" id="filter-fixed" type="radio" name="grid" value="fixed">
+									<input class="filter-input filter-input-radio visually-hidden" id="filter-fixed" type="radio" name="grid" value="fixed">
 									<label for="filter-fixed">Фиксированная</label>
 								</li>
 								<li class="filter-option">
-									<input class="filter-input filter-input-radio" id="filter-stretchy" type="radio" name="grid" value="stretchy">
+									<input class="filter-input filter-input-radio visually-hidden" id="filter-stretchy" type="radio" name="grid" value="stretchy">
 									<label for="filter-stretchy">Резиновая</label>
 								</li>
 							</ul>
@@ -123,7 +123,7 @@
 						<li class="catalog-item">
 							<span></span>	
 							<img src="img/pink_app_preview.jpg" width="360" height="576" alt="шаблон сайта Pink App">
-							<div class="catalog-buy-item visually-hidden">
+							<div class="catalog-buy-item">
 								<h3><a href="#">Pink</a></h3>
 								<p>Продуктовый лендинг приложения для iOS и Android</p>
 								<p class="button button-price">9 900 руб.</p>
@@ -132,7 +132,7 @@
 						<li class="catalog-item">
 							<span></span>
 							<img src="img/barbershop_preview.jpg" width="360" height="576" alt="шаблон сайта Barbershop">
-							<div class="catalog-buy-item visually-hidden">
+							<div class="catalog-buy-item">
 								<h3><a href="#">Barbershop</a></h3>
 								<p>Сайт салоны красоты.<br />
 								Для мужчин, да.
@@ -143,27 +143,36 @@
 						<li class="catalog-item">
 							<span></span>
 							<img src="img/mishka_preview.jpg" width="360" height="576" alt="шаблон сайта Mishka">
-							<div class="catalog-buy-item visually-hidden">
+							<div class="catalog-buy-item">
 								<h3><a href="#">Mishka</a></h3>
-								<p>Интернет-магазин вязанных игрушек</p>
+								<p>
+								Интернет-магазин<br>
+								вязанных игрушек
+								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
 							<span></span>
 							<img src="img/a_plus_preview.jpg" width="360" height="576" alt="шаблон сайта A Plus">
-							<div class="catalog-buy-item visually-hidden">
+							<div class="catalog-buy-item">
 								<h3><a href="#">A Plus</a></h3>
-								<p>Лендинг курсов повышения квалификации</p>
+								<p>
+								Лендинг курсов повышения<br>
+								квалификации
+								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
 							<span></span>
 							<img src="img/kvast_preview.jpg" width="360" height="576" alt="шаблон сайта Кваст">
-							<div class="catalog-buy-item visually-hidden">
+							<div class="catalog-buy-item">
 								<h3><a href="#">Кваст</a></h3>
-								<p>Промо-сайт производителя крафтового кваса</p>
+								<p>
+								Промо-сайт производителя<br>
+								крафтового кваса
+								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
