--- a/shop.html
+++ b/shop.html
@@ -53,41 +53,41 @@
 						</fieldset>
 						<fieldset>
 							<legend>Сетка:</legend>
-							<ul>
-								<li class="filter-option">
-									<input class="filter-input filter-input-radio visually-hidden" id="filter-adaptation" type="radio" name="grid" value="adaptation" checked>
+							<ul class="filter-option">
+								<li>
+									<input class="filter-input filter-input-radio" id="filter-adaptation" type="radio" name="grid" value="adaptation" checked>
 									<label for="filter-adaptation">Адаптивная</label>
 								</li>
-								<li class="filter-option">
-									<input class="filter-input filter-input-radio visually-hidden" id="filter-fixed" type="radio" name="grid" value="fixed">
+								<li>
+									<input class="filter-input filter-input-radio" id="filter-fixed" type="radio" name="grid" value="fixed">
 									<label for="filter-fixed">Фиксированная</label>
 								</li>
-								<li class="filter-option">
-									<input class="filter-input filter-input-radio visually-hidden" id="filter-stretchy" type="radio" name="grid" value="stretchy">
+								<li>
+									<input class="filter-input filter-input-radio" id="filter-stretchy" type="radio" name="grid" value="stretchy">
 									<label for="filter-stretchy">Резиновая</label>
 								</li>
 							</ul>
 						</fieldset>
 						<fieldset>
 							<legend>Особенности:</legend>
-							<ul>
-								<li class="filter-option">
+							<ul class="filter-option">
+								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-slider" type="checkbox" name="slider" checked>
 									<label for="filter-slider">Слайдер</label>
 								</li>
-								<li class="filter-option">
+								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-advantages" type="checkbox" name="advantages">
 									<label for="filter-advantages">Блок преимуществ</label>
 								</li>
-								<li class="filter-option">
+								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-news" type="checkbox" name="news" checked>
 									<label for="filter-news">Новости</label>
 								</li>
-								<li class="filter-option">
+								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-gallery" type="checkbox" name="gallery">
 									<label for="filter-gallery">Галерея</label>
 								</li>
-								<li class="filter-option">
+								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-basket" type="checkbox" name="basket">
 									<label for="filter-basket">Корзина</label>
 								</li>
@@ -137,7 +137,7 @@
 								<p>Сайт салоны красоты.<br />
 								Для мужчин, да.
 								</p>
-								<p class="button button-price">9 900 руб.</p>
+								<p class="button-price">9 900 руб.</p>
 							</div>
 						</li>
 						<li class="catalog-item">
