--- a/shop.html
+++ b/shop.html
@@ -178,10 +178,10 @@
 						</li>
 					</ul>
 					<ul class="pagination-list">
-						<li class="pagination-item pagination-item-current"><a>1</a></li>
-						<li class="pagination-item"><a href="#">2</a></li>
-						<li class="pagination-item"><a href="#">3</a></li>
-						<li class="pagination-item"><a href="#">Следующая</a></li>
+						<li class="pagination-item-current"><a>1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li class="next"><a href="#">Следующая</a></li>
 					</ul>
 				</section>
 			</div>
