--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			
 		</main>
 
-		<footer class="main-footer">
+		<footer class="main-footer first">
 			<section class="contacts">
 				<div class="footer-map">
 					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
