--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 		<footer class="main-footer first">
 			<section class="contacts">
 				<div class="footer-map">
-					<img src="img/map_contacts.jpg" width="" height="" alt="Карта">
+					<img src="img/map_contacts.jpg" width="1440" height="415" alt="Карта">
 				</div>
 				<div class="container">
 					<div class="footer-contacts">
