--- a/shop.html
+++ b/shop.html
@@ -117,6 +117,9 @@
 								Информационный сайт<br>
 								для туристов
 								</p>
+								<p>
+								Информационный сайт для туристов сайт для туристов сайт для туристов сайт для туристов сайт для туристов сайт для туристов сайт для туристов сайт для туристов сайт для туристов
+								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
 						</li>
@@ -200,7 +203,7 @@
 						ул. Б. Конюшенная, д. 19/8
 						</p>
 						<p class="mobile">
-						тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
+						тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a>
 						</p>
 						<a class="button button-contacts" href="contacts.html">Напишите нам</a>
 					</div>
