--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 					<ul class="services-list">
 						<li class="services-item site">
 							<h3>Веб-сайты</h3>
-							<p>Мир никогда не будет прежним<br>
-							после того, как увидит ваш сайт!
-							</p>
+							<p>Мир никогда не будет прежним после того, как увидит ваш сайт!</p>
 							<a class="button" href="#">Заказать</a>
 						</li>
 						<li class="services-item application">
@@ -88,10 +86,7 @@
 						</li>
 						<li class="services-item present">
 							<h3>Презентации</h3>
-							<p>
-							Вы даже не подозреваете,<br>
-							насколько вы изумительны!
-							</p>
+							<p>Вы даже не подозреваете, насколько вы изумительны!</p>
 							<a class="button" href="#">Заказать</a>
 						</li>
 					</ul>
@@ -101,8 +96,7 @@
 			
 				<section class="rules">
 					<h2 class="visually-hidden">Принципы работы</h2>
-					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая<br>
-					дизайн-студия из Краснодара.</b>
+					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара.</b>
 					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 					<h4>Выполняем заказы на разработку:</h4>
 					<ul class="rules-work">
@@ -122,17 +116,9 @@
 							<td>50<sup>%</sup></td>
 						</tr>
 						<tr>
-							<th>
-							Уровень<br>
-							самоотдачи
-							</th>
-							<th>
-							Соблюдение<br>
-							сроков
-							</th>
-							<th>Минимальная<br>
-							предоплата
-							</th>
+							<th>Уровень самоотдачи</th>
+							<th>Соблюдение сроков</th>
+							<th>Минимальная предоплата</th>
 						</tr>
 					</table>
 				</section>
@@ -184,7 +170,7 @@
 						ул. Б. Конюшенная, д. 19/8
 						</p>
 						<p class="mobile">
-						тел. <a href="tel:+78122757575">+7(812) 275-75-75</a>
+						тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a>
 						</p>
 						<a class="button button-contacts" href="contacts.html" >Напишите нам</a>
 					</div>
