--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 					</div>
 					<div class="slide">
 						<div class="slide-text">
-							<div class="slide-title">Любим математику<br>как никто другой</div>
+							<div class="slide-title">Любим математику как никто другой</div>
 							<p>
-							Никакого креатива, только математические формулы<br>
-							для расчета идеальных пропорций.
+							Никакого креатива, только математические формулы для расчета идеальных пропорций.
 							</p>
 							<a class="btn" href="#">Узнать больше</a>
 						</div>
