--- a/shop.html
+++ b/shop.html
@@ -56,15 +56,15 @@
 							<ul class="filter-option">
 								<li>
 									<input class="filter-input filter-input-radio" id="filter-adaptation" type="radio" name="grid" value="adaptation" checked>
-									<label for="filter-adaptation">Адаптивная</label>
+									<label for="filter-adaptation" tabindex="0">Адаптивная</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-radio" id="filter-fixed" type="radio" name="grid" value="fixed">
-									<label for="filter-fixed">Фиксированная</label>
+									<label for="filter-fixed" tabindex="0">Фиксированная</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-radio" id="filter-stretchy" type="radio" name="grid" value="stretchy">
-									<label for="filter-stretchy">Резиновая</label>
+									<label for="filter-stretchy" tabindex="0">Резиновая</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -73,23 +73,23 @@
 							<ul class="filter-option">
 								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-slider" type="checkbox" name="slider" checked>
-									<label for="filter-slider">Слайдер</label>
+									<label for="filter-slider" tabindex="0">Слайдер</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-advantages" type="checkbox" name="advantages">
-									<label for="filter-advantages">Блок преимуществ</label>
+									<label for="filter-advantages" tabindex="0">Блок преимуществ</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-news" type="checkbox" name="news" checked>
-									<label for="filter-news">Новости</label>
+									<label for="filter-news" tabindex="0">Новости</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-gallery" type="checkbox" name="gallery">
-									<label for="filter-gallery">Галерея</label>
+									<label for="filter-gallery" tabindex="0">Галерея</label>
 								</li>
 								<li>
 									<input class="filter-input filter-input-checkbox" id="filter-basket" type="checkbox" name="basket">
-									<label for="filter-basket">Корзина</label>
+									<label for="filter-basket" tabindex="0">Корзина</label>
 								</li>
 							</ul>
 						</fieldset>
