--- a/shop.html
+++ b/shop.html
@@ -114,8 +114,7 @@
 							<div class="catalog-buy-item">
 								<h3><a href="#">Sedona</a></h3>
 								<p>
-								Информационный сайт<br>
-								для туристов
+								Информационный сайт для туристов
 								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
@@ -134,8 +133,7 @@
 							<img src="img/barbershop_preview.jpg" width="360" height="576" alt="шаблон сайта Barbershop">
 							<div class="catalog-buy-item">
 								<h3><a href="#">Barbershop</a></h3>
-								<p>Сайт салоны красоты.<br />
-								Для мужчин, да.
+								<p>Сайт салоны красоты. Для мужчин, да.
 								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
@@ -146,8 +144,7 @@
 							<div class="catalog-buy-item">
 								<h3><a href="#">Mishka</a></h3>
 								<p>
-								Интернет-магазин<br>
-								вязанных игрушек
+								Интернет-магазин вязанных игрушек
 								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
@@ -158,8 +155,7 @@
 							<div class="catalog-buy-item">
 								<h3><a href="#">A Plus</a></h3>
 								<p>
-								Лендинг курсов повышения<br>
-								квалификации
+								Лендинг курсов повышения квалификации
 								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
@@ -170,8 +166,7 @@
 							<div class="catalog-buy-item">
 								<h3><a href="#">Кваст</a></h3>
 								<p>
-								Промо-сайт производителя<br>
-								крафтового кваса
+								Промо-сайт производителя крафтового кваса
 								</p>
 								<p class="button button-price">9 900 руб.</p>
 							</div>
