--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation container">
-				<a href="index.html">
+				<a class="logo" href="index.html">
 					<img src="img/index_logo.svg" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
 				</a>
 				<ul class="site-navigation">
