--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 					<label for="write-us-mail">Ваш e-mail:</label>
 					<input id="write-us-mail" type="email" name="mail" value="" placeholder="Для отправки ответа">
 				</p>
-				<p class="write-us-item">
+				<p class="write-us-item-text">
 					<label for="text-field">Текст письма:</label>
 					<textarea name="text" id="text-field" rows="6" placeholder="В свободной форме"></textarea>
 				</p>
