--- a/index.html
+++ b/index.html
@@ -233,5 +233,10 @@
 			</form>
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
+		
+		<script>
+
+		</script>
+		
 	</body>
 </html>
