--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				</p>
 				<p class="write-us-item-text">
 					<label for="text-field">Текст письма:</label>
-					<textarea name="text" id="text-field" rows="6" placeholder="В свободной форме"></textarea>
+					<textarea name="text" id="text-field" rows="5" placeholder="В свободной форме"></textarea>
 				</p>
 				<button class="button" type="submit">Отправить</button>
 			</form>
@@ -235,19 +235,19 @@
 		</section>
 		
 		<script>
-			var link = document.querySelector (".button-contacts");
+			var link = document.querySelector(".button-contacts");
 			
 			var popup = document.querySelector(".modal-write-us");
 			var close = popup.querySelector(".modal-close");
 			
 			link.addEventListener("click", function (evt) {
 				evt.preventDefault();
-				popup.classList.add(".modal-show");
+				popup.classList.add("modal-show");
 			});
 			
 			close.addEventListener("click", function (evt) {
 				evt.preventDefault();
-				popup.classList.remove(".modal-show");
+				popup.classList.remove("modal-show");
 			});
 		</script>
 		
