добавление скрипта на страницы

--- a/index.html
+++ b/index.html
@@ -234,22 +234,8 @@
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 		
-		<script>
-			var link = document.querySelector(".button-contacts");
-			
-			var popup = document.querySelector(".modal-write-us");
-			var close = popup.querySelector(".modal-close");
-			
-			link.addEventListener("click", function (evt) {
-				evt.preventDefault();
-				popup.classList.add("modal-show");
-			});
-			
-			close.addEventListener("click", function (evt) {
-				evt.preventDefault();
-				popup.classList.remove("modal-show");
-			});
-		</script>
+
+	<script src="js/script.js"></script>
 		
 	</body>
 </html>
