--- a/shop.html
+++ b/shop.html
@@ -251,7 +251,7 @@
 					<label for="write-us-mail">Ваш e-mail:</label>
 					<input id="write-us-mail" type="email" name="mail" value="" placeholder="Для отправки ответа">
 				</p>
-				<p class="write-us-item">
+				<p class="write-us-item-text">
 					<label for="text-field">Текст письма:</label>
 					<textarea name="text" id="text-field" rows="6" placeholder="В свободной форме"></textarea>
 				</p>
@@ -259,5 +259,8 @@
 			</form>
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
+		
+		<script src="js/script.js"></script>
+		
 	</body>
 </html>
