--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
 									<label for="filter-adaptation" tabindex="0">Адаптивная</label>
 								</li>
 								<li>
-									<input class="filter-input filter-input-radio" id="filter-fixed" type="radio" name="grid" value="fixed">
+									<input class="filter-input filter-input-radio" id="filter-fixed" type="radio" name="grid" value="fixed" disabled>
 									<label for="filter-fixed" tabindex="0">Фиксированная</label>
 								</li>
 								<li>
