--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -234,7 +234,7 @@
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 		
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 		
 	</body>
 </html>
