+правки по переполнению контентом

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -69,7 +69,7 @@
 
 		<main class="container">
 			<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-			
+
 				<section class="services">
 					<h2 class="visually-hidden">Услуги</h2>
 					<ul class="services-list">
@@ -90,9 +90,9 @@
 						</li>
 					</ul>
 				</section>
-			
+
 			<div class="index-columns">
-			
+
 				<section class="rules">
 					<h2 class="visually-hidden">Принципы работы</h2>
 					<b>Мы&nbsp;&mdash;&nbsp;маленькая, но гордая дизайн-студия из Краснодара.</b>
@@ -104,7 +104,7 @@
 						<li>Слайдшоу и видео для корпоративных презентаций</li>
 					</ul>
 				</section>
-			
+
 				<section class="statistic">
 					<img src="img/logo_color.jpg" width="360" height="208" alt="Логотип дизайн-студии Нёрдс">
 					<h4>С 2004 года любим точность во всем:</h4>
@@ -121,11 +121,11 @@
 						</tr>
 					</table>
 				</section>
-				
+
 			</div>
-			
+
 			<div class="index-columns">
-			
+
 				<section class="partners">
 					<h2 class="visually-hidden">Партнеры</h2>
 					<ul class="partners-list">
@@ -151,9 +151,9 @@
 						</li>
 					</ul>
 				</section>
-				
+
 			</div>
-			
+
 		</main>
 
 		<footer class="main-footer first">
@@ -233,8 +233,8 @@
 			</form>
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
-		
+
 		<script src="js/script.min.js"></script>
-		
+
 	</body>
 </html>
