--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -96,7 +96,7 @@
 						<button type="submit" class="filter-button button">Показать</button>
 					</form>
 				</section>
-			
+
 				<section class="catalog">
 					<h2 class="visually-hidden">Список шаблонов сайтов</h2>
 					<div class="sorting">
@@ -120,7 +120,7 @@
 							</div>
 						</li>
 						<li class="catalog-item">
-							<span></span>	
+							<span></span>
 							<img src="img/pink_app_preview.jpg" width="360" height="576" alt="шаблон сайта Pink App">
 							<div class="catalog-buy-item">
 								<h3><a href="#">Pink</a></h3>
@@ -239,7 +239,7 @@
 				</div>
 			</section>
 		</footer>
-		
+
 		<section class="modal modal-write-us">
 			<h2>Напишите нам</h2>
 			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
@@ -259,8 +259,8 @@
 			</form>
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
-		
+
 		<script src="js/script.min.js"></script>
-		
+
 	</body>
 </html>
