--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 
-		<script src="js/script.min.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
