--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -159,7 +159,7 @@
 		<footer class="main-footer first">
 			<section class="contacts">
 				<div class="footer-map">
-					<img src="img/map_contacts.jpg" width="1440" height="415" alt="Карта">
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A973f37b8e18fad8cecb287490aceb77c16fa410164eb9d74e59cbac8e528ae6a&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor" width="100%" height="415" frameborder="0"></iframe>
 				</div>
 				<div class="container">
 					<div class="footer-contacts">
@@ -219,7 +219,7 @@
 			<form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
 				<p class="write-us-item">
 					<label for="write-us-name">Ваше имя:</label>
-					<input id="write-us-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста">
+					<input id="write-us-name" type="text" name="login" value="" placeholder="Представьтесь, пожалуйста">
 				</p>
 				<p class="write-us-item">
 					<label for="write-us-mail">Ваш e-mail:</label>
@@ -234,7 +234,7 @@
 			<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
 		</section>
 
-		<script src="js/script.js"></script>
+		<script src="js/script.min.js"></script>
 
 	</body>
 </html>
