--- a/shop.html
+++ b/shop.html
@@ -185,7 +185,7 @@
 		<footer class="main-footer">
 			<section class="contacts">
 				<div class="footer-map">
-					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A973f37b8e18fad8cecb287490aceb77c16fa410164eb9d74e59cbac8e528ae6a&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor" width="100%" height="415" frameborder="0"></iframe>
+					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A973f37b8e18fad8cecb287490aceb77c16fa410164eb9d74e59cbac8e528ae6a&amp;lang=ru_RU&amp;scroll=true&amp;source=constructor" width="1440" height="415"></iframe>
 				</div>
 				<div class="container">
 					<div class="footer-contacts">
